# AI-Callbot-Vinfast

./: .env.example  .gitignore  .pre-commit-config.yaml  BLUEPRINT.md  PLAN.md  README.md  TASKGRAPH.md  TECHSTACK.md  TECH_STACK_GUIDE.md  WORKFLOW.md  planned_techstack_skeleton_codex.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: architecture.json  blueprint.json  phase_0_1_b_update.json  plan.json  readme.json  taskgraph.json  techstack.json  workflow.json
audio/: voice11.reference.txt  voice12.reference.txt  voice13.reference.txt  voice3.reference.txt  voice4.reference.txt  voice6.reference.txt  voice7.reference.txt  voice8.reference.txt  voice9.reference.txt
docs/: ARCHITECTURE.md  MODULE_REFERENCE.md  PHASE_0_1_B_UPDATE.md  eval_report.md  exceptions.md
eval/: ablation.py  ablation_results.json  harness.py  judge.py  latency.py  metrics.py  report_template.md  results_snapshot.json  run_eval.py  run_wer.py  wer.py  wer_results.json
scenarios/: exceptions.json  g1_roadside_rescue.json  g2_warranty_repair.json  g3_order_status.json  g4_motorbike_warranty.json  g5_remote_tech_support.json
scenarios/audio/: README.md  manifest.json  voice1.reference.txt  voice10.reference.txt  voice2.reference.txt  voice5.reference.txt
scenarios/eval/: adversarial.json  emergency.json  happy.json
scripts/: measure_emergency.py  measure_latency.py  measure_nlu.py  mic_check.py  setup.ps1  setup.sh  setup_asr.py  setup_tts.py
src/callbot/: __init__.py  __main__.py  config.py  demo.css  gradio_app.py  main.py  pipeline.py  voice_call.py
src/callbot/asr/: __init__.py  base.py  faster_whisper_asr.py  groq_asr.py
src/callbot/audio/: __init__.py  playback.py  recorder.py  stream.py  vad.py
src/callbot/dialogue/: __init__.py  categories.py  engine.py  exceptions.py  extraction.py  fake_engine.py  graph.py  intent.py  nodes.py  post_call.py  response.py  state.py  values.py
src/callbot/llm/: base.py  ollama_client.py  prompts.py
src/callbot/models/: schemas.py
src/callbot/normalization/: __init__.py  base.py  vietnamese_numbers.py
src/callbot/tts/: __init__.py  base.py  edge_tts.py  piper_tts.py  vixtts.py
src/callbot/utils/: latency.py  logging.py
tests/: test_ablation.py  test_categories.py  test_contract.py  test_engine.py  test_eval.py  test_filler.py  test_greeting.py  test_groq_asr.py  test_llm_client.py  test_metrics_a30.py  test_nlu.py  test_normalization.py  test_observability.py  test_pipeline_tts_ui.py  test_post_call.py  test_stream.py  test_voice_call.py
