[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "callbot"
version = "0.0.0"
description = "VinFast Vietnamese customer-service callbot (Task 3)"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper==1.2.1",
    "langchain-core==1.4.8",
    "langgraph==1.2.6",
    "numpy==2.5.0",
    "ollama==0.6.2",
    "pydantic==2.13.4",
    "silero-vad==6.2.1",
    "sounddevice==0.5.5",
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "ruff==0.15.19",
]

# src-layout: package lives under src/callbot so `pip install -e .` exposes `import callbot`.
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # several ML libs ship no type stubs

[tool.pytest.ini_options]
norecursedirs = ["pytest-cache-files-*"]
pythonpath = ["src"]
