[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "callbot"
version = "0.0.0"
description = "VinFast Vietnamese customer-service callbot (Task 3)"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper==1.2.1",
    "langchain-core==1.4.8",
    "langgraph==1.2.6",
    "numpy==2.5.0",
    "ollama==0.6.2",
    "pydantic==2.13.4",
    "silero-vad==6.2.1",
    "sounddevice==0.5.5",
]

[project.optional-dependencies]
dev = [
    "jiwer==4.0.0",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "ruff==0.15.19",
]
# ASR conversion: PhoWhisper -> CTranslate2 (run scripts/setup_asr.py). ctranslate2 also
# arrives transitively via faster-whisper; pinned here so the converter is always present.
asr = [
    "ctranslate2==4.8.0",
    "transformers==5.12.1",
]
# Gradio web demo (callbot.main --gradio).
ui = [
    "gradio==6.19.0",
]
# GPU ASR: CUDA 12 runtime DLLs (cublas/cudnn/cudart) for ctranslate2 on NVIDIA GPUs.
# FasterWhisperASR puts these on PATH automatically when ASR_DEVICE=cuda (Windows). Verified
# on RTX 5070 / Blackwell sm_120 (driver CUDA 13.1) with ASR_COMPUTE_TYPE=float16.
gpu = [
    "nvidia-cublas-cu12==12.9.2.10",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "nvidia-cudnn-cu12==9.23.2.1",
]

# src-layout: package lives under src/callbot so `pip install -e .` exposes `import callbot`.
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort

[tool.mypy]
# 3.12 (not the 3.11 runtime) so mypy can parse modern dependency stubs — numpy 2.5
# uses the 3.12 `type` statement. Runtime stays 3.11 (requires-python + CI + ruff).
python_version = "3.12"
ignore_missing_imports = true   # several ML libs ship no type stubs

[tool.pytest.ini_options]
norecursedirs = [".pytest_cache", "pytest-cache-files-*"]
pythonpath = ["src"]
